clusters/main/kubernetes/apps/obsidian/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: obsidian
  annotations:
    volsync.backube/privileged-movers: "true"
